--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
-src/sar_pi.cpp
-src/sar_pi.h
-src/sargui.cpp
-src/sargui.h
-src/sargui_impl.cpp
-src/sargui_impl.h
+src/calculate_pi.cpp
+src/calculate_pi.h
+src/calculategui.cpp
+src/calculategui.h
+src/calculategui_impl.cpp
+src/calculategui_impl.h
