--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,8 @@
-src/calculate_pi.cpp
-src/calculate_pi.h
-src/calculategui.cpp
-src/calculategui.h
-src/calculategui_impl.cpp
-src/calculategui_impl.h
+src/SARgui.h
+src/SARgui.cpp
+src/SAR_pi.cpp
+src/SAR_pi.h
+src/SARgui_impl.cpp
+src/NavFunc.cpp
+src/NavFunc.h
+src/SARgui_impl.h
