Embedded bitmaps into source

--- a/src/bitmaps/CMakeLists.txt
+++ b/src/bitmaps/CMakeLists.txt
@@ -27,6 +27,8 @@ INCLUDE_DIRECTORIES(
 	${CMAKE_SOURCE_DIR}/src
 )
 
+
+
 # require proper c++
 #ADD_DEFINITIONS( "-Wall -ansi -pedantic -Wno-variadic-macros" )
 #TODO: Should we use  -fno-stack-protector
@@ -106,7 +108,6 @@ ELSE(TINYXML_FOUND)
     ADD_DEFINITIONS(-DTIXML_USE_STL)
 ENDIF(TINYXML_FOUND)
 
-
 ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_SAR} ${SRC_FROM_OCPN})
 
 IF(WIN32)
@@ -116,7 +117,7 @@ IF(WIN32)
   #TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} C:/OSGeo4W/lib/iconv.lib )
 ENDIF(WIN32)
 
-#TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${ICONV_LIBRARIES} )
+TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${ICONV_LIBRARIES} )
 
 TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${wxWidgets_LIBRARIES} )
 
