--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ MESSAGE (STATUS "*** Building ${PACKAGE_NAME} ***")
 #SET(CMAKE_BUILD_TYPE Debug)
 
 INCLUDE_DIRECTORIES(
-	${CMAKE_SOURCE_DIR}/include 
+	${CMAKE_SOURCE_DIR}/include
 	${CMAKE_SOURCE_DIR}/src
 )
 
@@ -50,10 +50,14 @@ IF(WIN32)
     ADD_DEFINITIONS( /DOMIT_GEOS /DOMIT_PROJ /DOMIT_FREEXL /DSQLITE_ENABLE_RTREE=1 /DVERSION="\\"3.0.1\\"")
 ENDIF(WIN32)
 
+IF(UNIX AND NOT APPLE)
+  SET(PREFIX_PLUGINS /usr/lib/opencpn)
+  SET(PREFIX_DATA /usr/share)
+ENDIF(UNIX AND NOT APPLE)
 
-#SET(wxWidgets_USE_LIBS base core net xml html adv)
-#SET(BUILD_SHARED_LIBS TRUE)
-#FIND_PACKAGE(wxWidgets REQUIRED)
+SET(wxWidgets_USE_LIBS base core net xml html adv)
+SET(BUILD_SHARED_LIBS TRUE)
+FIND_PACKAGE(wxWidgets REQUIRED)
 
 INCLUDE(${wxWidgets_USE_FILE})
 
@@ -80,20 +84,20 @@ SET(SRC_SAR
 	    src/bitmaps.cpp
 	)
 
-SET(SRC_FROM_OCPN 	
+SET(SRC_FROM_OCPN
 #	../../../include/cutil.h
 #	../../../src/cutil.c
 #	../../../include/georef.h
 #	../../../src/georef.c
 #	../../../include/gpxdocument.h
-#	../../../src/gpxdocument.cpp	    	
+#	../../../src/gpxdocument.cpp
 	)
 
 SET(SRC_TINYXML
-	../../../include/tinyxml.h
-        ../../../src/tinyxml.cpp
-        ../../../src/tinyxmlparser.cpp
-        ../../../src/tinyxmlerror.cpp
+	include/tinyxml.h
+        src/tinyxml.cpp
+        src/tinyxmlparser.cpp
+        src/tinyxmlerror.cpp
 	)
 
 IF(TINYXML_FOUND)
