--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,10 @@ PROJECT(SAR_pi)
 SET(PACKAGE_NAME sar_pi)
 SET(VERBOSE_NAME SAR)
 SET(TITLE_NAME SAR)
-SET(CPACK_PACKAGE_CONTACT "SaltyPaws")
+SET(CPACK_PACKAGE_CONTACT "Rasbats")
 
 SET(VERSION_MAJOR "2")
-SET(VERSION_MINOR "3")
+SET(VERSION_MINOR "4")
 
 SET(NAME_SUFFIX "ov50")
 SET(CMAKE_CXX_STANDARD 11)
