New pot-file and potfile.in. Small string adjustments

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,8 +1,6 @@
-src/SARgui.h
-src/SARgui.cpp
-src/SAR_pi.cpp
-src/SAR_pi.h
-src/SARgui_impl.cpp
-src/NavFunc.cpp
-src/NavFunc.h
-src/SARgui_impl.h
+src\SARgui.cpp
+src\SARgui.h
+src\SARgui_impl.cpp
+src\SARgui_impl.h
+src\SAR_pi.cpp
+
