--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,48 +1,137 @@
-##---------------------------------------------------------------------------
-## Author:      SaltyPaws aka. Walbert Schulpen
-## Copyright:
-## License:     wxWidgets License
-##---------------------------------------------------------------------------
+# ---------------------------------------------------------------------------
+# Author:      jongough aka. Jon Gough Copyright: License:     wxWidgets License
+# ---------------------------------------------------------------------------
 
+## ----- When changing this file do NOT change the order in which sections occur        ----- ##
+## ----- Changes should only be made between the section blocks that identify where     ----- ##
+## ----- these changes should be. The whole configuration process relies on this        ----- ##
+## ----- sequence to be successful                                                      ----- ##
+##
+
+##
+## ----- Modify section below to include all the details for your plugin ----- ##
+##
+
+set(CMLOC "CMakeLists: ")
 
 # define minimum cmake version
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
+cmake_minimum_required(VERSION 3.1.1)
+if(COMMAND cmake_policy)
+    if(POLICY CMP0043)
+        cmake_policy(SET CMP0043 NEW)
+    endif(POLICY CMP0043)
+    cmake_policy(SET CMP0048 NEW)
+    if(POLICY CMP0077)
+        cmake_policy(SET CMP0077 NEW)
+    endif(POLICY CMP0077)
+endif(COMMAND cmake_policy)
 
-PROJECT(SAR_pi)
+# define plugin name, owner and versions
 
-SET(PACKAGE_NAME sar_pi)
-SET(VERBOSE_NAME SAR)
-SET(TITLE_NAME SAR)
-SET(CPACK_PACKAGE_CONTACT "Rasbats")
+SET(VERBOSE_NAME "SAR")
+set(COMMON_NAME "sar")
+SET(TITLE_NAME "SAR")
+SET(PACKAGE_CONTACT "Rasbats")
+SET(PACKAGE "SAR")
+
 
 SET(VERSION_MAJOR "2")
 SET(VERSION_MINOR "5")
 
-SET(NAME_SUFFIX "ov50")
-SET(CMAKE_CXX_STANDARD 11)
+set(VERSION_PATCH "0")
+set(VERSION_TWEAK "0")
+set(VERSION_DATE "19/06/2020")
+set(OCPN_MIN_VERSION "ov50")
+set(OCPN_API_VERSION_MAJOR "1")
+set(OCPN_API_VERSION_MINOR "16")
+set(TP_COMMENT "  * Release for O5 using CI")
 
-#SET(CMAKE_BUILD_TYPE Debug)
+set(PARENT "opencpn")
 
+# The next line allows for setting up your own local webserver with git on it for testing purposes, the default is github.com
+set(GIT_REPOSITORY_SERVER "github.com")
 
-# Definitions
-add_definitions (
--D_FILE_OFFSET_BITS=64
--D_LARGEFILE_SOURCE
--DLIBUNRAR_BUILD
--DRARDLL
--DUNRAR
--DSILENT
-)
+# Specifies cloudsmith repository sufficies
+set(PROD "prod") # Standard Repos
+set(BETA "beta") # Standard Repos
+set(ALPHA "alpha") # Standard Repos
 
-OPTION(SAR_USE_SVG "Use SVG graphics" ON)
+set(CLOUDSMITH_USER "mike-rossiter")
+# set this if your cloudsmith repository name does not match your git repository name set(CLOUDSMITH_BASE_REPOSITORY "testplugin_pi")
+set(CLOUDSMITH_BASE_REPOSITORY "sar")
 
-INCLUDE("cmake/PluginConfigure.cmake")
+set(XML_INFO_URL "https://opencpn.org/wiki/dokuwiki/doku.php?id=opencpn:supplementary_software:chart_work:sar_search_patterns")
+set(XML_SUMMARY "Plugin to create search patterns for Search and Rescue")
+set(XML_DESCRIPTION "SAR Plugin is used to create search patterns for SAR")
 
-IF(SAR_USE_SVG)
-  ADD_DEFINITIONS(-DSAR_USE_SVG)
-ENDIF(SAR_USE_SVG)
+##
+## ----- Modify section above to include all the details for your plugin ----- ##
+##
 
-SET(SRC_SAR
+##
+## ----- Modify section below if there are special requirements for the plugin ----- ##
+##
+
+option(PLUGIN_USE_SVG "Use SVG graphics" ON)
+
+set(CMAKE_CXX_STANDARD 11)
+
+# Prefer libGL.so to libOpenGL.so, see CMP0072
+set(OpenGL_GL_PREFERENCE "LEGACY")
+# Don't use local version of GLU library
+set(USE_LOCAL_GLU FALSE)
+option(USE_GL "Enable OpenGL support" OFF)
+message(STATUS "${CMLOC}USE_GL: ${USE_GL}")
+
+if("${CMAKE_BUILD_TYPE}" STREQUAL "")
+    set(CMAKE_BUILD_TYPE
+        "Release"
+        CACHE STRING "Choose the type of build" FORCE)
+endif("${CMAKE_BUILD_TYPE}" STREQUAL "")
+set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "" "Debug" "Release" "RelWithDebInfo" "MinSizeRel")
+message(STATUS "${CMLOC}Build type: ${CMAKE_BUILD_TYPE}")
+
+##
+## ----- The statements below are used to setup standard variables that are required by the CMAKE process - do not remove ----- ##
+##
+
+project(${PACKAGE})
+
+include("cmake/PluginSetup.cmake")
+
+##
+## ----- The above is used to setup standard variables that are required by the CMAKE process - do not remove ----- ##
+##
+
+##
+## ----- Modify section below if there are special requirements for the plugin ----- ##
+##
+
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
+option(Plugin_CXX11 "Use c++11" OFF)
+
+##
+## ----- Modify section above if there are special requirements for the plugin ----- ##
+##
+
+##
+## ----- do not change next section - needed to configure build process ----- ##
+##
+
+include("cmake/PluginConfigure.cmake")
+
+##
+## ----- do not change section above - needed to configure build process ----- ##
+##
+
+#
+# ----- Change below to match project requirements for source, headers, etc. ----- ##
+#
+
+add_definitions(-DUSE_S57)
+
+SET(SRCS
 		src/SAR_pi.h
         src/SAR_pi.cpp
         src/icons.h
@@ -57,33 +146,30 @@ SET(SRC_SAR
 	    src/bitmaps.cpp
 	)
 
-INCLUDE_DIRECTORIES(
-	  src
-	  src/OpenCPN
-)
+#INCLUDE_DIRECTORIES(
+#	  src
+#	  src/OpenCPN
+#)
 
-IF(UNIX)
- INCLUDE("cmake/FindTinyXML.cmake")
- FIND_PACKAGE(TinyXML QUIET)
-ENDIF(UNIX)
+add_definitions(-DPLUGIN_USE_SVG)
 
-IF(TINYXML_FOUND)
- message (STATUS "Building with system tinyxml")
- INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
- ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_SAR})
- TARGET_LINK_LIBRARIES(${PACKAGE_NAME} ${TINYXML_LIBRARIES})
-ELSE(TINYXML_FOUND)
- message (STATUS "Building with embedded tinyxml")
- INCLUDE_DIRECTORIES(src/tinyxml/)
- SET(SRC_LTINYXML
-            src/tinyxml/tinyxml.cpp
-            src/tinyxml/tinyxmlparser.cpp
-            src/tinyxml/tinyxmlerror.cpp
- )
- ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_SAR} ${SRC_LTINYXML})
-ENDIF(TINYXML_FOUND)
-ADD_DEFINITIONS(-DTIXML_USE_STL)
 
-INCLUDE("cmake/PluginInstall.cmake")
-INCLUDE("cmake/PluginLocalization.cmake")
-INCLUDE("cmake/PluginPackage.cmake")
+add_library(${PACKAGE_NAME} SHARED ${SRCS})
+
+add_definitions(-DTIXML_USE_STL)
+
+##
+## ----- Change above to match project requirements ----- ##
+##
+
+##
+## ----- do not change next section - needed to configure build process ----- ##
+##
+
+include("cmake/PluginInstall.cmake")
+include("cmake/PluginLocalization.cmake")
+include("cmake/PluginPackage.cmake")
+
+##
+## ----- do not change section above - needed to configure build process ----- ##
+##
