--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,12 @@
-src\SARgui.cpp
-src\SARgui.h
-src\SARgui_impl.cpp
-src\SARgui_impl.h
-src\SAR_pi.cpp
+src/SAR_pi.h
+src/SAR_pi.cpp
+src/icons.h
+src/icons.cpp
+src/SARgui.h
+src/SARgui.cpp
+src/SARgui_impl.cpp
+src/SARgui_impl.h
+src/NavFunc.h
+src/NavFunc.cpp
+src/bitmaps.h
+src/bitmaps.cpp
