--- a/cmake/in-files/wxWTranslateCatalog.h.in
+++ b/cmake/in-files/wxWTranslateCatalog.h.in
@@ -33,9 +33,9 @@
 #undef _
 #endif // _
 #if wxCHECK_VERSION(3,0,0)
-#define _(s) wxGetTranslation((s), wxS("opencpn-${PROJECT_NAME}"))
+#define _(s) wxGetTranslation((s), wxS("mike-rossiter-${PROJECT_NAME}"))
 #else // wxCHECK_VERSION(3,0,0)
-    #define _(s) wxGetTranslation(wxT(s), wxT("opencpn-${PROJECT_NAME}"))
+    #define _(s) wxGetTranslation(wxT(s), wxT("mike-rossiter-${PROJECT_NAME}"))
 #endif // wxCHECK_VERSION(3,0,0)
 #endif // WXINTL_NO_GETTEXT_MACRO
 
