--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ SET(PACKAGE "sar")
 SET(VERSION_MAJOR "2")
 SET(VERSION_MINOR "6")
 
-set(VERSION_PATCH "7")
+set(VERSION_PATCH "8")
 set(VERSION_TWEAK "0")
 set(VERSION_DATE "19/06/2020")
 set(OCPN_MIN_VERSION "ov50")
@@ -58,9 +58,9 @@ set(PROD "prod") # Standard Repos
 set(BETA "beta") # Standard Repos
 set(ALPHA "alpha") # Standard Repos
 
-set(CLOUDSMITH_USER "mike-rossiter")
+set(CLOUDSMITH_USER "opencpn")
 # set this if your cloudsmith repository name does not match your git repository name set(CLOUDSMITH_BASE_REPOSITORY "sar")
-#set(CLOUDSMITH_BASE_REPOSITORY "sar")
+set(CLOUDSMITH_BASE_REPOSITORY "sar")
 
 set(XML_INFO_URL "https://opencpn.org/wiki/dokuwiki/doku.php?id=opencpn:supplementary_software:chart_work:sar_search_patterns")
 set(XML_SUMMARY "Plugin to create search patterns for Search and Rescue")
